--- a/pages/landing.css
+++ b/pages/landing.css
@@ -2,7 +2,6 @@
 #side{
     width: 35%;
     background-color: rgb(57 67 71);
-    height: 100vh;
     padding-top: 30px;
 }
 
@@ -14,10 +13,13 @@
 
 .container-1{
     list-style: none;
+    width: 35%;
     margin: 0;
     padding: 0;
     display: flex;
     justify-content: center;
+    position: fixed;
+
 }
 
 li a {
@@ -68,27 +70,25 @@ li a {
 
 .hello{
     text-align: center;
-    font-size: 150px;;
+    font-size: 130px;;
+    font-family: 'Montserrat', sans-serif;
     color:white;
     margin-top: 25px;
-    margin-bottom: 0;
     position: relative;
     animation: text1 2s;
-    letter-spacing: -6px;
+    letter-spacing: 5px;
+    height: 100%;
 }
 
 @keyframes text1 {
     0%{
         color: rgb(57 67 71);
-        margin-bottom: -40px;
     }
     30%{
         letter-spacing: 25px;
-        margin-bottom: -40px;
     }
     85%{
-        letter-spacing: -6px;
-        margin-bottom: -40px;
+        letter-spacing: 5px;
     }
 }
 
