--- a/pages/projects.css
+++ b/pages/projects.css
@@ -1,12 +1,22 @@
-.side-1{
+/*.side-1{
     background-color: rgb(217 91 68);
     display: flex;
     height: 50%;
-    border-bottom: 20px solid rgb(255 216 87);
+    border-bottom: 14px solid rgb(255 216 87);
 }
 
 .container-2{
     height: 100vh;
+    
+}
+
+.container-3 {
+    position: relative;
+}
+
+.container-4{
+    position: relative;
+    height: 50vh;
 }
 
 .side-1 h1{
@@ -15,24 +25,133 @@
     line-height: 100px;
 }
 
+.side-2 {
+    position: relative;
+    height: 50%;
+    float: right;
+}
+
 .title{
     width: 35%;
     display: flex;
-    justify-content: center;
     align-items: center;
-    margin: 0;
+    margin-left: 6%;
+    float: left;
 }
 
 .text{
+    margin-left: 6%;
+    float: left;
     width: 35%;
     font-size: 16px; 
     padding-top: 50px;
     line-height: 129.4%;
     display: flex;
-    justify-content: center;
     align-items: center;
 }
 
 .text p {
     width: 80%;
+}
+
+.image{
+    display: flex;
+    align-items: center;
+}
+.image img{
+    width: 50%;
+    position: absolute;
+    box-shadow: 11px 11px 7px -5px rgba(0,0,0,0.12);
+    border-top: 14px solid rgb(255 216 87);
+}
+
+.arrow-btn{
+    z-index: 20;
+    position: absolute;
+    right: 0;
+    margin: 10px 15px;
+}
+
+.project-name p{
+    position: absolute;
+}*/
+
+.top-half{
+    border-bottom: 14px solid rgb(255 216 87);
+    height: 50vh;
+}
+
+.projects-pane{
+    height: 100vh;
+    position: relative;
+}
+
+.project-des {
+    width: 40%;
+    height: 100vh;
+}
+
+.project-title{
+    display: flex;
+    align-content: center;
+    height: 50vh;
+    background-color: rgb(217 91 68);
+    color:rgb(255 216 87);
+    border-bottom: 14px solid rgb(255 216 87);
+}
+
+.project-title h1{
+    display: flex;
+    align-items: center;
+    margin-left: 10%;
+    font-size: 110px;
+    line-height: 110%;
+}
+
+.project-info{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.project-info p{
+    width: 80%;
+    font-size: 16px; 
+    padding-top: 50px;
+    line-height: 150%;
+}
+
+.project-img{
+    width: 60%;
+    height: 100vh;
+}
+
+.project-title-2{
+    width: 60%;
+    height: 50vh;
+    background-color: rgb(217 91 68);
+    float: right;
+    position: absolute;
+    top:0;
+    right: 0;
+    border-bottom: 14px solid rgb(255 216 87);
+}
+
+.image{
+    position: absolute;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    margin-left: 25px;   
+}
+
+.image img{
+    width:85%;
+
+}
+
+.sides{
+    display: flex;
 }
