--- a/pages/projects.css
+++ b/pages/projects.css
@@ -69,20 +69,32 @@
     position: relative;
 }
 
-.top-1{
+/* .top-1{
     height: 20%;
     width: 100%;
-}
+    position: relative;
+} */
 
 .middle{
-    height: 60%;
+    height: 100vh;
     width:100%;
     position: relative;
+    /* display: flex; */
+    justify-content: center;
+    align-items: center;
 }
 
-.bottom{
+/* .bottom{
     height: 20%;
     width: 100%;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    margin-top: -30px;
+} */
+
+.bottom p{
+    text-transform: uppercase;
 }
 
 .image-preview {
@@ -91,13 +103,13 @@
     /* FF3.6-15 */
     background: -webkit-linear-gradient(-45deg, #000000 0%, #000000 25%, #1e539e 50%, #ff3083 75%, #7800a8 100%);
     /* Chrome10-25,Safari5.1-6 */
-    background: linear-gradient(135deg, #000000 0%, #000000 25%, #1e539e 50%, #ff3083 75%, #7800a8 100%);
+    background: linear-gradient(135deg, #000000 0%, #000000 25%, #3b4346 50%, #ffd857 75%, #d95b44 100%);
     /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
     background-size: 400% 400%;
     background-repeat: no-repeat;
     display: flex;
-    width: 80%;
-    height: 100%;
+    width: 90%;
+    height: 50%;
     max-width: 100vw;
     max-height: 100vh;
     justify-content: center;
@@ -117,6 +129,67 @@
     width: 100%;
     height: 100%;
     z-index: 1;
-    opacity: .5;
+    opacity: .7;
     mix-blend-mode: screen;
+  }
+
+  .image-preview__title {
+    position: relative;
+    text-transform: uppercase;
+    letter-spacing: .05em;
+    color: white;
+    font-size: 26px;
+    opacity: 0.8;
+  }
+
+  .image-preview__img:hover{
+    opacity: .3; 
+  } 
+
+  .image-preview:hover {
+    background-position: 100% 100%;
+  }
+
+  .arrow-btn{
+      width: 22%;
+      position: absolute;
+      right:0;
+      padding-top: 12%;
+      padding-right: 8%;
+  }
+
+  .img-dec{
+    width: 100%;
+    position: absolute;
+    margin-top: -10%;
+    display: flex;
+    align-items: center;
+  }
+
+  .project-name{
+      color: #ff4346;
+      margin-right: 30px;
+      font-weight: 800;
+  }
+
+  .project-tech{
+      color: #3b4346;
+  }
+
+  .icon{
+      position: absolute;
+      width:80%;
+      padding-top: 4%;
+   }
+
+   .icon img{
+        width:40%;
+        margin-left: 24%;
+    }
+
+  .image-btn{
+      display: flex;
+      height: 82%;
+      align-items: center;
+      padding-top: 5%;
   }
