--- a/pages/projects.css
+++ b/pages/projects.css
@@ -11,7 +11,6 @@
     align-items: center;
     justify-content: center;
     position: relative;
-    background: #F9DF7D;
     text-transform: uppercase;
 }
 
@@ -146,4 +145,41 @@
 
 .flickity-button {
     background: transparent;
+  }
+
+  .carousel-wrapper{
+    width: 80%;
+    margin: auto;
+  }
+
+  @media only screen and (max-width: 500px){
+    .carousel-wrapper{
+        width: 100%;
+        margin: auto;
+        margin-top: -70px;
+      }
+      .description p {
+        margin-top: -90px;
+        width: 85%;
+        font-size: 14px;
+      }
+      .bottom{
+        width: 85%;
+        margin-top: 20px; 
+        display: flex;
+        justify-content: space-between;
+    }
+    .title h1 {
+        position: absolute;
+        width: 100%;
+        text-align: center;
+        font-size: 48px;
+        color: #D95B44;
+    }
+    .title-wrapper {
+        /* height: 18vh; */
+        display: flex;
+        align-items: flex-end;
+        padding-top: 20px;
+    }
   }
