--- a/pages/projects.css
+++ b/pages/projects.css
@@ -151,12 +151,22 @@
     width: 80%;
     margin: auto;
   }
+ 
 
-@media only screen 
-  and (min-device-width: 375px) 
-  and (max-device-width: 812px)
+  
+
+@media only screen and (min-device-width : 320px) and (max-device-width : 480px)
   and (-webkit-device-pixel-ratio: 3)
   and (orientation : portrait) {
+
+    .title h1 {
+        position: absolute;
+        width: 100%;
+        text-align: center;
+        font-size: 88px;
+        color: #D95B44;
+    }
+
     .carousel-wrapper {
         width: 100%;
         margin: auto;
@@ -171,27 +181,27 @@
         align-items: center;
         justify-content: center;
       }
+
       .description p {
-        width: 80%;
-        font-size: 18px;
+        width: 75%;
+        font-size: 16px;
     }
     .bottom {
-        width: 80%;
-        margin-top: 20px;
+        width: 75%;
         display: flex;
         justify-content: space-between;
     }
     .made-with {
         color: #D95B44;
         font-weight: bolder;
-        font-size: 18px;
+        font-size: 16px;
         text-transform: uppercase;
     }
     .web-link {
         color: #364346;
         text-decoration: none;
         font-weight: bolder;
-        font-size: 18px;
+        font-size: 16px;
         text-transform: uppercase;
     }
       
