--- a/pages/projects.css
+++ b/pages/projects.css
@@ -206,3 +206,55 @@
     }
       
 }
+
+@media only screen 
+    and (device-width : 414px) 
+    and (device-height : 896px) 
+    and (-webkit-device-pixel-ratio : 2) { 
+        
+    .title h1 {
+        position: absolute;
+        width: 100%;
+        text-align: center;
+        font-size: 88px;
+        color: #D95B44;
+    }
+
+    .carousel-wrapper {
+        width: 100%;
+        margin: auto;
+    }
+    .carousel-cell {
+        width: 100%;
+        height: 30vh;
+        margin-right: 10px;
+        margin-top: 25px;
+        /* center images in cells with flexbox */
+        display: flex;
+        align-items: center;
+        justify-content: center;
+      }
+
+      .description p {
+        width: 75%;
+        font-size: 16px;
+    }
+    .bottom {
+        width: 75%;
+        display: flex;
+        justify-content: space-between;
+    }
+    .made-with {
+        color: #D95B44;
+        font-weight: bolder;
+        font-size: 16px;
+        text-transform: uppercase;
+    }
+    .web-link {
+        color: #364346;
+        text-decoration: none;
+        font-weight: bolder;
+        font-size: 16px;
+        text-transform: uppercase;
+    }
+    }
